HW3 - Advanced Task Plus Alignment Issues Fixed
I made a floating nav bar and fixed some alignment issues.

--- a/Alexander/HW3_monument_lab_starter/css/style.css
+++ b/Alexander/HW3_monument_lab_starter/css/style.css
@@ -25,6 +25,7 @@ Navigation
 
 nav {
 	width: 100%;
+	height: 50px;
 	text-align: center;
 	margin: 20px 0px 20px 0px;
 
@@ -36,6 +37,16 @@ nav a {
 	color: #7B98AA;
 	text-decoration: none;
 	text-transform: uppercase;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: white;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    margin: 0;
+    padding: 20px 0px 40px 0px;
 }
 
 /* ----------------------------------------
@@ -206,6 +217,9 @@ Archive Flexbox
 	width: 100%;
 }
 
+div .col-1-3 {
+text-align: center;
+}
 .archive1 {
 	flex:1;
 
